create constellation playground section, clean up images, and add a couple new images

--- a/index.html
+++ b/index.html
@@ -70,49 +70,88 @@
         </div>
       </div>
       <div class="image-column col-sm-6 animation-element slide-right">
-        <div class="img-wrapper">
-          <img src="aa-monitor.png" alt="aa" class="app-img" />
-          <div class="overlay">
-            <div class="overlay-text-aa">
-              <h2>Audio Advocate</h2>
-              <p>Visit Site</p>
+        <a href="http://www.audioadvocate.co" target="_blank">
+          <div class="img-wrapper">
+            <img src="aa-monitor.png" alt="aa" class="app-img" />
+            <div class="overlay">
+              <div class="overlay-text-aa">
+                <h2>Audio Advocate</h2>
+                <p>Visit Site</p>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
       </div>
     </section>
 
     <section id="three" class="row">
       <div class="image-column col-sm-6 animation-element slide-left">
-        <div class="img-wrapper">
-          <img src="aa-monitor.png" alt="aa" class="app-img" />
-          <div class="overlay">
-            <div class="overlay-text-cp">
-              <h2>Constellation Playground</h2>
-              <p>Visit Site</p>
+        <a href="http://www.constellationplayground.co" target="_blank">
+          <div class="img-wrapper">
+            <img src="cp-monitor.png" alt="aa" class="app-img" />
+            <div class="overlay">
+              <div class="overlay-text-cp">
+                <h2>Constellation Playground</h2>
+                <p>Visit Site</p>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
       </div>
       <div class="col-sm-6 animation-element slide-right">
         <div class="title-div">
-          <a class="title" href="http://constellationplayground.co" target="_blank">Constellation Playground</a>
+          <a class="title" href="http://www.constellationplayground.co" target="_blank">Constellation Playground</a>
+        </div>
+        <div class="tagline">
+          Create your own constellations.<br>
+        </div>
+        <div class="text">
+          <div class="description">
+           Compose, name, and save your own constellations in a given set of stars. Check out the Constellation Community to view other users' skies.<br>
+          </div>
+          <div class="tools">
+            Interactive star and line components were created with a <strong>ReactJS/Redux</strong> front end.
+            The user experience (UI/UX) consists of <strong>Scalable Vector Graphics (SVG)</strong> that respond to mouse hovers and clicks.
+            Constellation and star data is stored in a <strong>PostgreSQL</strong> database with logic built on a <strong>Rails API</strong>.
+            A secure user sign-up and login experience was constructed with <strong>JWT authorization</strong>.
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="four" class="row">
+      <div class="col-sm-6 animation-element slide-left">
+        <div class="title-div">
+          <a class="title" href="http://www.audioadvocate.co" target="_blank">Audio Advocate</a>
         </div>
         <div class="tagline">
           Compare ratings and reviews for audio gear.<br>
         </div>
         <div class="text">
           <div class="description">
-            Compare ratings and reviews for audio gear.<br>
+            The app uses data gathered from pro audio retailers including Amazon, Sweetwater, and Guitar Center. Sort products based on average rating, number of ratings, and price, or filter by category. Product view features individual customer reviews and ratings.<br>
           </div>
           <div class="tools">
-            Created product card and review components using a ReactJS/Redux front end
-            Built a Rails API back end to sort and filter products based on different criteria
-            Scraped several music retail websites for product data using Nokogiri
-            Stored product data including reviews and ratings in a PostgreSQL database
-            Leveraged Amazon’s Product Advertising API to generate iFrames containing reviews from Amazon.com
+            Product card and review components were created using a <strong>ReactJS/Redux</strong> front end.
+            The back end is a <strong>Rails API</strong> which handles the sorting and filtering of products based on different criteria.
+            Data was gathered by scraping music retail websites using <strong>Nokogiri</strong>.
+            All data is stored in a <strong>PostgreSQL</strong> database.
+            <strong>Amazon’s Product Advertising API</strong> was used to generate iFrames containing reviews from Amazon.com.
           </div>
         </div>
+      </div>
+      <div class="image-column col-sm-6 animation-element slide-right">
+        <a href="http://www.audioadvocate.co" target="_blank">
+          <div class="img-wrapper">
+            <img src="aa-monitor.png" alt="aa" class="app-img" />
+            <div class="overlay">
+              <div class="overlay-text-aa">
+                <h2>Audio Advocate</h2>
+                <p>Visit Site</p>
+              </div>
+            </div>
+          </div>
+        </a>
       </div>
     </section>
 
