add resume, blog, and github links

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <span class="navbar-brand">ES</span>
+            <a class="scroll" href="#one"><span class="navbar-brand">ES</span></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <div class="navbar-right" id="links">
-              <a class="scroll" href="#one"><span class="underline">Home</span></a>
               <a class="scroll" href="#two"><span class="underline">Projects</span></a>
-              <a class="scroll" href="#three"><span class="underline">About Me</span></a>
+              <a class="scroll" href="EricSchwartzResume.pdf" target="_blank"><span class="underline">Resume</span></a>
+              <a class="scroll" href="https://medium.com/@ericschwartz7" target="_blank"><span class="underline">Blog</span></a>
             </div>
           </div><!-- /.navbar-collapse -->
         </nav>
@@ -70,33 +70,33 @@
         </div>
       </div>
       <div class="image-column col-sm-6 animation-element slide-right">
-        <a href="http://www.audioadvocate.co" target="_blank">
-          <div class="img-wrapper">
-            <img src="aa-monitor.png" alt="aa" class="app-img" />
-            <div class="overlay">
-              <div class="overlay-text-aa">
-                <h2>Audio Advocate</h2>
-                <p>Visit Site</p>
+        <div class="img-wrapper">
+          <img src="aa-monitor.png" alt="aa" class="app-img" />
+          <div class="overlay">
+            <div class="overlay-text overlay-text-aa">
+              <a href="http://www.audioadvocate.co" target="_blank"><h2>Audio Advocate</h2></a>
+              <div class="github-links">
+                <a href="https://github.com/EricSchwartz7/audio-advocate" target="_blank">GitHub - FE</a> | <a href="https://github.com/EricSchwartz7/audio-advocate-api" target="_blank">GitHub - BE</a>
               </div>
             </div>
           </div>
-        </a>
+        </div>
       </div>
     </section>
 
     <section id="three" class="row">
       <div class="image-column col-sm-6 animation-element slide-left">
-        <a href="http://www.constellationplayground.co" target="_blank">
-          <div class="img-wrapper">
-            <img src="cp-monitor.png" alt="cp" class="app-img" />
-            <div class="overlay">
-              <div class="overlay-text-cp">
-                <h2>Constellation Playground</h2>
-                <p>Visit Site</p>
+        <div class="img-wrapper">
+          <img src="cp-monitor.png" alt="cp" class="app-img" />
+          <div class="overlay">
+            <div class="overlay-text overlay-text-cp">
+              <a href="http://www.constellationplayground.co" target="_blank"><h2>Constellation Playground</h2></a>
+              <div class="github-links">
+                <a href="https://github.com/entcheva/constellation-playground" target="_blank">GitHub - FE</a> | <a href="https://github.com/entcheva/constellationsAPI" target="_blank">GitHub - BE</a>
               </div>
             </div>
           </div>
-        </a>
+        </div>
       </div>
       <div class="col-sm-6 animation-element slide-right">
         <div class="title-div">
@@ -140,33 +140,29 @@
         </div>
       </div>
       <div class="image-column col-sm-6 animation-element slide-right">
-        <a href="http://www.battleofwits.co" target="_blank">
           <div class="img-wrapper">
             <img src="bow-monitor.png" alt="bow" class="app-img" />
             <div class="overlay">
-              <div class="overlay-text-bow">
-                <h2>Battle of Wits</h2>
-                <p>Visit Site</p>
+              <div class="overlay-text overlay-text-bow">
+                <a href="http://www.battleofwits.co" target="_blank"><h2>Battle of Wits</h2></a>
+                <a href="https://github.com/Franco84/BattleOfWits" target="_blank">GitHub</a>
               </div>
             </div>
           </div>
-        </a>
       </div>
     </section>
 
     <section id="five" class="row">
       <div class="image-column col-sm-6 animation-element slide-left">
-        <a href="https://amazon-product-finder.herokuapp.com" target="_blank">
           <div class="img-wrapper">
             <img src="apf-monitor.png" alt="apf" class="app-img" />
             <div class="overlay">
-              <div class="overlay-text-apf">
-                <h2>Amazon Product Finder</h2>
-                <p>Visit Site</p>
+              <div class="overlay-text overlay-text-apf">
+                <a href="https://amazon-product-finder.herokuapp.com" target="_blank"><h2>Amazon Product Finder</h2></a>
+                <a href="https://github.com/EricSchwartz7/amazon-product-finder" target="_blank">GitHub</a>
               </div>
             </div>
           </div>
-        </a>
       </div>
       <div class="col-sm-6 animation-element slide-right">
         <div class="title-div">
@@ -190,7 +186,7 @@
     <section id="six" class="row">
       <div class="col-sm-6 animation-element slide-left">
         <div class="title-div">
-          <a class="title" href="https://flatiron-champions.herokuapp.com" target="_blank">Flatiron Champions</a>
+          <a class="title" href="https://github.com/EricSchwartz7/flatiron_champions" target="_blank">Flatiron Champions</a>
         </div>
         <div class="tagline">
           Challenge your friends to Pokémon-like battles using Flatiron School themed students and instructors.<br>
@@ -207,17 +203,17 @@
         </div>
       </div>
       <div class="image-column col-sm-6 animation-element slide-right">
-        <a href="https://github.com/EricSchwartz7/flatiron_champions" target="_blank">
-          <div class="img-wrapper">
-            <img src="fc-monitor.png" alt="fc" class="app-img" />
-            <div class="overlay">
-              <div class="overlay-text-fc">
+        <div class="img-wrapper">
+          <img src="fc-monitor.png" alt="fc" class="app-img" />
+          <div class="overlay">
+            <div class="overlay-text overlay-text-fc">
+              <a href="https://github.com/EricSchwartz7/flatiron_champions" target="_blank">
                 <h2>Flatiron Champions</h2>
-                <p>View GitHub Repo</p>
-              </div>
+                <p>GitHub</p>
+              </a>
             </div>
           </div>
-        </a>
+        </div>
       </div>
     </section>
 
