add header tags

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Eric's Portfolio</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta name="description" content="The developer portfolio of Eric Schwartz">
+    <meta name="keywords" content="HTML,CSS,JavaScript,Ruby on Rails,React,Redux,Apps,Applications,Websites,Resume">
+    <meta name="author" content="Eric Schwartz">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
