update background photo

--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
         </nav>
 
       <section id="one" class="row">
-        <h1 class="greeting">Hi, I'm Eric. I build web applications.</h1><br>
-        <a href="#two" class="scroll">
-          Scroll down to see examples of my work<br>
-          <span class="glyphicon glyphicon-menu-down" />
-        </a>
+        <div>
+          <h1 class="greeting">Hi, I'm Eric. I build web applications.</h1><br>
+          <a href="#two" class="scroll">
+            Scroll down to see examples of my work<br>
+            <span class="glyphicon glyphicon-menu-down" />
+          </a>
+        </div>
       </section>
 
 
