Add Concert Archive to the portfolio. Add updated resume.

--- a/index.html
+++ b/index.html
@@ -53,6 +53,40 @@
         </div>
       </section>
 
+    <section id="concert-archive" class="row">
+      <div class="image-column col-sm-6 animation-element slide-left">
+        <div class="img-wrapper">
+          <img src="ca-monitor.png" alt="fc" class="app-img" />
+          <div class="overlay">
+            <div class="overlay-text overlay-text-ca">
+              <a href="https://github.com/EricSchwartz7/gmg-archive" target="_blank"><h2>Concert Archive</h2></a>
+              <div class="github-links">
+                <a href="https://github.com/EricSchwartz7/gmg-archive" target="_blank">GitHub - FE</a> | <a href="https://github.com/EricSchwartz7/audio-advocate-api" target="_blank">GitHub - BE</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 animation-element slide-right">
+        <div class="title-div">
+          <a class="title" href="https://github.com/EricSchwartz7/gmg-archive-api" target="_blank">Concert Archive</a>
+        </div>
+        <div class="tagline">
+          Setlist database with photos and videos.<br>
+        </div>
+        <div class="text">
+          <div class="description">
+            Search through shows, and view or upload photos and videos from each date. View song statistics including set openers, closers, encores, and percentage played.<br>
+          </div>
+          <div class="tools">
+            <strong>ReactJS</strong> front end with a <strong>Rails</strong> back end.
+            Data is stored in a <strong>PostgreSQL</strong> relational database.
+            Integrated <strong>Cloudinary</strong> for media storage and transformations.
+            Styling with <strong>Semantic-UI React</strong>.
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section id="two" class="row">
       <div class="col-sm-6 animation-element slide-left">
