Scroll link should scroll to most recent project.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <div class="navbar-right" id="links">
-              <a class="scroll" href="#two"><span class="underline">Projects</span></a>
+              <a class="scroll" href="#concert-archive"><span class="underline">Projects</span></a>
               <a class="scroll" href="EricSchwartzResume.pdf" target="_blank"><span class="underline">Resume</span></a>
               <a class="scroll" href="https://medium.com/@ericschwartz7" target="_blank"><span class="underline">Blog</span></a>
             </div>
@@ -46,7 +46,7 @@
       <section id="one" class="row">
         <div>
           <h1 class="greeting">Hi, I'm Eric. I build web applications.</h1><br>
-          <a href="#two" class="scroll">
+          <a href="#concert-archive" class="scroll">
             Scroll down to see examples of my work<br>
             <span class="glyphicon glyphicon-menu-down" />
           </a>
