Update links for GMG Archive app.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <img src="ca-monitor.png" alt="fc" class="app-img" />
           <div class="overlay">
             <div class="overlay-text overlay-text-ca">
-              <a href="https://github.com/EricSchwartz7/gmg-archive" target="_blank"><h2>Concert Archive</h2></a>
+              <a href="https://gmg-archive.herokuapp.com" target="_blank"><h2>Concert Archive</h2></a>
               <div class="github-links">
                 <a href="https://github.com/EricSchwartz7/gmg-archive" target="_blank">GitHub - FE</a> | <a href="https://github.com/EricSchwartz7/audio-advocate-api" target="_blank">GitHub - BE</a>
               </div>
@@ -69,7 +69,7 @@
       </div>
       <div class="col-sm-6 animation-element slide-right">
         <div class="title-div">
-          <a class="title" href="https://github.com/EricSchwartz7/gmg-archive-api" target="_blank">Concert Archive</a>
+          <a class="title" href="https://gmg-archive.herokuapp.com" target="_blank">Concert Archive</a>
         </div>
         <div class="tagline">
           Setlist database with photos and videos.<br>
