--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <img src="cp-monitor.png" alt="cp" class="app-img" />
           <div class="overlay">
             <div class="overlay-text overlay-text-cp">
-              <a href="http://www.constellationplayground.co" target="_blank"><h2>Constellation Playground</h2></a>
+              <a href="https://constellation-playground.herokuapp.com/" target="_blank"><h2>Constellation Playground</h2></a>
               <div class="github-links">
                 <a href="https://github.com/entcheva/constellation-playground" target="_blank">GitHub - FE</a> | <a href="https://github.com/entcheva/constellationsAPI" target="_blank">GitHub - BE</a>
               </div>
@@ -140,7 +140,7 @@
       </div>
       <div class="col-sm-6 animation-element slide-right">
         <div class="title-div">
-          <a class="title" href="http://www.constellationplayground.co" target="_blank">Constellation Playground</a>
+          <a class="title" href="https://constellation-playground.herokuapp.com/" target="_blank">Constellation Playground</a>
         </div>
         <div class="tagline">
           Create your own constellations.<br>
