--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section id="two" class="row">
       <div class="col-sm-6 animation-element slide-left">
         <div class="title-div">
-          <a class="title" href="http://www.audioadvocate.co" target="_blank">Audio Advocate</a>
+          <a class="title" href="https://audioadvocate.herokuapp.com/" target="_blank">Audio Advocate</a>
         </div>
         <div class="tagline">
           Compare ratings and reviews for audio gear.<br>
@@ -114,7 +114,7 @@
           <img src="aa-monitor.png" alt="aa" class="app-img" />
           <div class="overlay">
             <div class="overlay-text overlay-text-aa">
-              <a href="http://www.audioadvocate.co" target="_blank"><h2>Audio Advocate</h2></a>
+              <a href="https://audioadvocate.herokuapp.com/" target="_blank"><h2>Audio Advocate</h2></a>
               <div class="github-links">
                 <a href="https://github.com/EricSchwartz7/audio-advocate" target="_blank">GitHub - FE</a> | <a href="https://github.com/EricSchwartz7/audio-advocate-api" target="_blank">GitHub - BE</a>
               </div>
