remove dead heroku links. update resume

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <img src="ca-monitor.png" alt="fc" class="app-img" />
           <div class="overlay">
             <div class="overlay-text overlay-text-ca">
-              <a href="https://gmg-archive.herokuapp.com" target="_blank"><h2>Concert Archive</h2></a>
+              <h2>Concert Archive</h2>
               <div class="github-links">
                 <a href="https://github.com/EricSchwartz7/gmg-archive" target="_blank">GitHub - FE</a> | <a href="https://github.com/EricSchwartz7/audio-advocate-api" target="_blank">GitHub - BE</a>
               </div>
@@ -69,7 +69,7 @@
       </div>
       <div class="col-sm-6 animation-element slide-right">
         <div class="title-div">
-          <a class="title" href="https://gmg-archive.herokuapp.com" target="_blank">Concert Archive</a>
+          Concert Archive
         </div>
         <div class="tagline">
           Setlist database with photos and videos.<br>
@@ -91,7 +91,7 @@
     <section id="two" class="row">
       <div class="col-sm-6 animation-element slide-left">
         <div class="title-div">
-          <a class="title" href="https://audioadvocate.herokuapp.com/" target="_blank">Audio Advocate</a>
+          Audio Advocate
         </div>
         <div class="tagline">
           Compare ratings and reviews for audio gear.<br>
@@ -114,7 +114,7 @@
           <img src="aa-monitor.png" alt="aa" class="app-img" />
           <div class="overlay">
             <div class="overlay-text overlay-text-aa">
-              <a href="https://audioadvocate.herokuapp.com/" target="_blank"><h2>Audio Advocate</h2></a>
+              <h2>Audio Advocate</h2>
               <div class="github-links">
                 <a href="https://github.com/EricSchwartz7/audio-advocate" target="_blank">GitHub - FE</a> | <a href="https://github.com/EricSchwartz7/audio-advocate-api" target="_blank">GitHub - BE</a>
               </div>
@@ -130,7 +130,7 @@
           <img src="cp-monitor.png" alt="cp" class="app-img" />
           <div class="overlay">
             <div class="overlay-text overlay-text-cp">
-              <a href="https://constellation-playground.herokuapp.com/" target="_blank"><h2>Constellation Playground</h2></a>
+              <h2>Constellation Playground</h2>
               <div class="github-links">
                 <a href="https://github.com/entcheva/constellation-playground" target="_blank">GitHub - FE</a> | <a href="https://github.com/entcheva/constellationsAPI" target="_blank">GitHub - BE</a>
               </div>
@@ -140,7 +140,7 @@
       </div>
       <div class="col-sm-6 animation-element slide-right">
         <div class="title-div">
-          <a class="title" href="https://constellation-playground.herokuapp.com/" target="_blank">Constellation Playground</a>
+          Constellation Playground
         </div>
         <div class="tagline">
           Create your own constellations.<br>
@@ -162,7 +162,7 @@
     <section id="four" class="row">
       <div class="col-sm-6 animation-element slide-left">
         <div class="title-div">
-          <a class="title" href="http://www.battleofwits.co" target="_blank">Battle of Wits</a>
+          Battle of Wits
         </div>
         <div class="tagline">
           Battle your friends in a trivia contest.<br>
@@ -198,7 +198,7 @@
             <img src="apf-monitor.png" alt="apf" class="app-img" />
             <div class="overlay">
               <div class="overlay-text overlay-text-apf">
-                <a href="https://amazon-product-finder.herokuapp.com" target="_blank"><h2>Amazon Product Finder</h2></a>
+                <h2>Amazon Product Finder</h2>
                 <a href="https://github.com/EricSchwartz7/amazon-product-finder" target="_blank">GitHub</a>
               </div>
             </div>
@@ -206,7 +206,7 @@
       </div>
       <div class="col-sm-6 animation-element slide-right">
         <div class="title-div">
-          <a class="title" href="https://amazon-product-finder.herokuapp.com" target="_blank">Amazon Product Finder</a>
+          Amazon Product Finder
         </div>
         <div class="tagline">
           A simple shopping cart app.<br>
