keep the title class

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
       <div class="col-sm-6 animation-element slide-right">
         <div class="title-div">
-          Concert Archive
+          <a class='title'>Concert Archive</a>
         </div>
         <div class="tagline">
           Setlist database with photos and videos.<br>
@@ -91,7 +91,7 @@
     <section id="two" class="row">
       <div class="col-sm-6 animation-element slide-left">
         <div class="title-div">
-          Audio Advocate
+          <a class='title'>Audio Advocate</a>
         </div>
         <div class="tagline">
           Compare ratings and reviews for audio gear.<br>
@@ -140,7 +140,7 @@
       </div>
       <div class="col-sm-6 animation-element slide-right">
         <div class="title-div">
-          Constellation Playground
+          <a class='title'>Constellation Playground</a>
         </div>
         <div class="tagline">
           Create your own constellations.<br>
@@ -162,7 +162,7 @@
     <section id="four" class="row">
       <div class="col-sm-6 animation-element slide-left">
         <div class="title-div">
-          Battle of Wits
+          <a class='title'>Battle of Wits</a>
         </div>
         <div class="tagline">
           Battle your friends in a trivia contest.<br>
@@ -206,7 +206,7 @@
       </div>
       <div class="col-sm-6 animation-element slide-right">
         <div class="title-div">
-          Amazon Product Finder
+          <a class='title'>Amazon Product Finder</a>
         </div>
         <div class="tagline">
           A simple shopping cart app.<br>
@@ -226,7 +226,7 @@
     <section id="six" class="row">
       <div class="col-sm-6 animation-element slide-left">
         <div class="title-div">
-          <a class="title" href="https://github.com/EricSchwartz7/flatiron_champions" target="_blank">Flatiron Champions</a>
+          <a class="title">Flatiron Champions</a>
         </div>
         <div class="tagline">
           Challenge your friends to Pokémon-like battles using Flatiron School themed students and instructors.<br>
